--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "blocklist-check"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 
 [dependencies]
@@ -18,6 +18,7 @@ env_logger = "0.11.8"
 reqwest = { version = "0.12.24", features = ["stream", "rustls-tls-webpki-roots"] }
 chrono = { version = "0.4.42", features = ["serde"] }
 rocket-cache-response = "0.6.4"
+url = "2.5.7"
 
 [build-dependencies]
 reqwest = { version = "0.12", features = ["blocking", "json"] }
