feat: add reporter, database

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
 [workspace]
-members = [ "querying",
+members = [
+    "querying",
+    "reporter",
+    "reports",
     "website",
 ]
 resolver = "3"
@@ -8,3 +11,4 @@ resolver = "3"
 tokio = { version = "1.48.0", features = ["full"] }
 reqwest = { version = "0.12.24", features = ["stream", "rustls-tls-webpki-roots"] }
 log = "0.4.28"
+serde = { version = "1", features = ["derive"] }
