--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,11 +25,18 @@ jobs:
       - name: Build Debian package
         run: cargo deb -- --bin cheburchecker
 
+      - name: Find deb file
+        id: find_deb_amd64
+        run: |
+           FILE=$(ls target/debian/*.deb | head -n 1)
+           echo "file=$FILE" >> "$GITHUB_OUTPUT"
+
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: linux-amd64-deb
-          path: target/debian/*.deb
+          path: ${{ steps.find_deb_amd64.outputs.file }}
+          compression-level: 0
 
   linux-arm64:
     name: Linux arm64 (.deb via cross)
@@ -48,16 +55,22 @@ jobs:
         with:
           command: build
           target: "aarch64-unknown-linux-gnu"
-          args: "--release"
+          args: "--release --bin cheburchecker"
 
       - name: Create Debian archive
         run: cargo deb --target aarch64-unknown-linux-gnu --no-build --bin cheburchecker
+
+      - name: Find deb file
+        id: find_deb_arm64
+        run: |
+          FILE=$(ls target/aarch64-unknown-linux-gnu/debian/*.deb | head -n 1)
+          echo "file=$FILE" >> "$GITHUB_OUTPUT"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: linux-arm64-deb
-          path: target/aarch64-unknown-linux-gnu/debian/*.deb
+          path: ${{ steps.find_deb_arm64.outputs.file }}
 
   windows:
     name: Windows amd64
@@ -69,10 +82,16 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
 
       - name: Build release binary
-        run: cargo build --release
+        run: cargo build --release --bin cheburchecker
+
+      - name: Find exe
+        id: find_exe
+        run: |
+          FILE=$(ls target/release/*.exe | head -n 1)
+          echo "file=$FILE" >> "$GITHUB_OUTPUT"
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: windows-amd64-exe
-          path: target/release/*.exe
+          path: ${{ steps.find_exe.outputs.file }}
